<resources>
  <string name="app_name">Bye Bye Stress</string>
  <string name="title_activity_main">MainActivity</string>
  <string name="title_home">Home</string>
  <string name="title_stress_tes">Cek Stress</string>
  <string name="title_chat">Chat</string>
  <string name="title_profile">Akun</string>
  <string name="title_stress_test">Stress Test</string>
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="title_activity_tes">TesActivity</string>
  <string name="title_dashboard">Dashboard</string>
  <string name="title_notifications">Notifications</string>
  <string name="question_count">10 Pertanyaan</string>
  <string name="title_description">DESKRIPSI</string>
  <string name="description">Tes ini dirancang untuk membantu Anda memahami tingkat stres Anda saat ini. Tes ini terdiri dari 10 pertanyaan yang akan menanyakan tentang perasaan, pikiran, dan perilaku Anda dalam beberapa minggu terakhir. Jawaban Anda akan dianalisa untuk menentukan tingkat stres Anda.</string>
  <string name="start">Mulai</string>
  <string name="next">Next</string>
  <string name="back">Back</string>
  <string name="login">Login</string>
  <string name="email">Email</string>
  <string name="password">Password</string>
  <string name="masuk">Masuk</string>
  <string name="create_account">Buat akun</string>
  <string name="score_test">13</string>
  <string name="title_recomendation">Stress Rendah</string>
  <string name="activity_image">Activity Image</string>
  <string name="recomendation_activity">Saran aktivitas</string>
    <string name="finish">Finish</string>
    <string name="rekomendasi_stres_berat">Memerlukan bantuan professional untuk melakukan manajemen stres, sehingga perlu menghubungi profesional</string>
  <string name="rekomendasi_stres_ringan">Melakukan manajemen stres mandiri dengan metode self-care.</string>
  <string name="rekomendasi_stres_sedang">Melakukan manajemen stres mandiri dengan metode self-care dan mendapatkan rekomendasi profesional.</string>
</resources>