<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/background_screen"
  tools:context=".ui.login.LoginActivity">

  <View
    android:layout_width="141dp"
    android:layout_height="141dp"
    android:layout_marginStart="-70dp"
    android:layout_marginTop="-70dp"
    android:background="@drawable/ellipse"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <View
    android:layout_width="185dp"
    android:layout_height="185dp"
    android:layout_marginTop="-70dp"
    android:layout_marginEnd="-70dp"
    android:background="@drawable/ellipse"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/tv_login"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="206dp"
    android:fontFamily="@font/poppins_bold"
    android:text="@string/login"
    android:textAlignment="center"
    android:textColor="@color/primary_color"
    android:textSize="32sp"
    android:textStyle="bold"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/tf_email"
    style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:layout_marginTop="60dp"
    app:boxCornerRadiusBottomEnd="12dp"
    app:boxCornerRadiusBottomStart="12dp"
    app:boxCornerRadiusTopEnd="12dp"
    app:boxCornerRadiusTopStart="12dp"
    app:boxStrokeWidth="3dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/tv_login">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/et_email"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:fontFamily="@font/poppins"
      android:hint="@string/email"
      android:inputType="textEmailAddress"
      android:textSize="18sp" />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/tf_password"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:layout_marginTop="16dp"
    app:boxCornerRadiusBottomEnd="12dp"
    app:boxCornerRadiusBottomStart="12dp"
    app:boxCornerRadiusTopEnd="12dp"
    app:boxCornerRadiusTopStart="12dp"
    app:boxStrokeWidth="3dp"
    app:endIconMode="password_toggle"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/tf_email">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/et_password"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:fontFamily="@font/poppins"
      android:hint="@string/password"
      android:inputType="textPassword"
      android:textSize="18sp" />
  </com.google.android.material.textfield.TextInputLayout>

  <Button
    android:id="@+id/btn_login"
    style="@style/ButtonStyle"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:layout_marginHorizontal="16dp"
    android:layout_marginTop="32dp"
    android:fontFamily="@font/poppins"
    android:text="@string/masuk"
    android:textSize="18sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/tf_password" />

  <TextView
    android:id="@+id/btn_create_account"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:fontFamily="sans-serif"
    android:text="@string/create_account"
    android:textSize="18sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/btn_login" />


</androidx.constraintlayout.widget.ConstraintLayout>